tests/ui_unstable/invalid_type_include_wch.stderr
error: unexpected wchar type `f32`, expected one of: u16, u32, i16, i32
 --> $DIR/invalid_type_include_wch.rs:3:43
  |
3 | const INVALID_TYPE: &[f32] = include_wch!(f32, "../data/basic.txt");
  |                                           ^^^
